2021-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/gen.h,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Infrastructure for non-__z88dk_fastcall register arguments.

2021-05-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/*/main.c:
	  Make restriction on register parameters for vararg functions port-specific.

2021-05-11 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3231.c:
	  Disable __critical test for host.

2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Put all the documentation required by Annex J.3, "Implementation-defined behaviour", of the C standard in one place.

2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c:
	  Improve stack adjustment.

2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/loop.c,
	  support/regression/tests/gcc-torture-execute-20010409-1.c:
	  Disable tests that rely on asm-implemented longjmp.

2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3231.c:
	  Fix bug #3231.

2021-05-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3230.c:
	  Fix bug #3230.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/bug-3229.c:
	  Fix bug #3229.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix some bugs triggered by return values in other than the conventional registers.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in handling of return values in bc.
	* device/lib/clean.mk:
	  Fix clean for r2ka library.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/*/spec.mk:
	  Run regression tests without profile info to allow tests of calling convention with return vlues in a.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>
